--- a/scripts/config/main/train_transition.yaml
+++ b/scripts/config/main/train_transition.yaml
@@ -3,27 +3,27 @@ entity_name: DRL_Project_Group
 run_name: ''
 
 train:
-  load_path: TBD!
-  save_path: TBD!
+  load_path: null
+  save_path: /data/mqj/datasets/transition-model-general-1008trajs.pt
 
 TransitionModel:
   state_dim: 3584
   action_dim: 768
   embed_dim: 2048 # or others?
   num_attn_layers: 12
-  num_heads: 12
+  num_heads: 16
   activation: ReLU
 
 Action_encoder:
   action_encoder_backbone: roberta-base # deberta-base , electra-base
-  action_encoder_cache_dir: TBD!
+  action_encoder_cache_dir: null
 
 data:
-  data_path: TBD!
+  data_path: /data/mqj/datasets/general-1008trajs-transition.pt
   batch_size: 512
   capacity: 500000
   train_ratio: 0.8
   val_ratio: 0.2
 
 tools:
-  wandb_key: TBD!
+  wandb_key: e0eb5f8fe893dc0119123578457a29ce75167b03
