--- a/scripts/config/main/train_value.yaml
+++ b/scripts/config/main/train_value.yaml
@@ -4,7 +4,7 @@ run_name: ''
 
 train:
   load_path: null
-  save_path: /data/mqj/datasets/
+  save_path: /content/drive/MyDrive/College/Tsinghua/Deep_Reinforcement_Learning/digiq_mb/train_value_model
   epoch: 100
   val_interval: 10
 
@@ -12,6 +12,7 @@ TransitionModel:
   state_dim: 3584
   goal_dim: 1536
   embed_dim: 2048 # or others?
+  action_dim: 1536
   num_attn_layers: 12
   num_heads: 16
   activation: ReLU
@@ -20,8 +21,12 @@ Action_encoder:
   action_encoder_backbone: roberta-base # deberta-base , electra-base
   action_encoder_cache_dir: null
 
+Goal_encoder:
+  goal_encoder_backbone: roberta-base
+  goal_encoder_cache_dir: null
+
 data:
-  data_path: /data/mqj/datasets/general-1008trajs-transition.pt
+  data_path: /content/drive/MyDrive/College/Tsinghua/Deep_Reinforcement_Learning/digiq_mb/datasets/general-origin-uitars.pt
   batch_size: 512
   capacity: 500000
   train_ratio: 0.8
