--- a/scripts/config/main/train_transition.yaml
+++ b/scripts/config/main/train_transition.yaml
@@ -4,15 +4,18 @@ run_name: ''
 
 train:
   load_path: null
-  save_path: /data/mqj/datasets/
-  epoch: 100
+  save_path: /content/drive/MyDrive/DRL_project_2/digiq_mb/trained_transition_models
+  epoch: 150
   val_interval: 10
+  K: 5 # nb of models
+  seed: 1234
+  bagging: true # to activate bootst sampling
 
 TransitionModel:
   state_dim: 3584
   action_dim: 1536
-  embed_dim: 2048 # or others?
-  num_attn_layers: 12
+  embed_dim: 2048
+  num_attn_layers: 32
   num_heads: 16
   activation: ReLU
 
@@ -21,7 +24,7 @@ Action_encoder:
   action_encoder_cache_dir: null
 
 data:
-  data_path: /data/mqj/datasets/general-1008trajs-transition.pt
+  data_path: /content/drive/MyDrive/DRL_project_2/digiq_mb/datasets/general-origin-uitars-transition.pt
   batch_size: 512
   capacity: 500000
   train_ratio: 0.8
