--- a/scripts/config/main/train_transition.yaml
+++ b/scripts/config/main/train_transition.yaml
@@ -14,6 +14,7 @@ train:
 TransitionModel:
   state_dim: 3584
   action_dim: 1536
+  goal_dim: 2048
   embed_dim: 2048
   num_attn_layers: 32
   num_heads: 16
