--- a/scripts/config/main/train_transition.yaml
+++ b/scripts/config/main/train_transition.yaml
@@ -14,8 +14,9 @@ train:
 TransitionModel:
   state_dim: 3584
   action_dim: 1536
+  goal_dim: 1536
   embed_dim: 2048
-  num_attn_layers: 32
+  num_attn_layers: 12
   num_heads: 16
   activation: ReLU
 
@@ -24,8 +25,9 @@ Action_encoder:
   action_encoder_cache_dir: null
 
 data:
-  data_path: /content/drive/MyDrive/DRL_project_2/digiq_mb/datasets/general-origin-uitars-transition.pt
-  batch_size: 512
+  data_path_general: /content/drive/MyDrive/DRL_project_2/digiq_mb/new_datasets/general-ft.pt
+  data_path_web_shop: /content/drive/MyDrive/DRL_project_2/digiq_mb/new_datasets/webshop-ft.pt
+  batch_size: 256
   capacity: 500000
   train_ratio: 0.8
   val_ratio: 0.2
