--- a/scripts/config/main/train_transition.yaml
+++ b/scripts/config/main/train_transition.yaml
@@ -4,20 +4,20 @@ run_name: ''
 
 train:
   load_path: null
-  save_path: /content/drive/MyDrive/DRL_project_2/digiq_mb/trained_transition_models
-  epoch: 150
+  save_path: /data/mqj/models/full_transition
+  epoch: 1500 # more for transformer (~1500), less for MLP (~500)
   val_interval: 10
-  K: 5 # nb of models
-  seed: 1234
-  bagging: true # to activate bootst sampling
+  K: 1 # nb of models
+  seed: 3047
+  bagging: false # to activate bootst sampling
 
 TransitionModel:
   state_dim: 3584
   action_dim: 1536
-  goal_dim: 1536
+  goal_dim: 768
   embed_dim: 2048
-  num_attn_layers: 12
-  num_heads: 16
+  num_attn_layers: 0
+  num_heads: 4
   activation: ReLU
 
 Action_encoder:
@@ -29,8 +29,8 @@ Goal_encoder:
   goal_encoder_cache_dir: null
 
 data:
-  data_path_general: /content/drive/MyDrive/DRL_project_2/digiq_mb/new_datasets/general-ft.pt
-  data_path_web_shop: /content/drive/MyDrive/DRL_project_2/digiq_mb/new_datasets/webshop-ft.pt
+  data_path_general: /data/mqj/datasets/rl/general-ft.pt
+  data_path_web_shop: /data/mqj/datasets/rl/webshop-ft.pt
   batch_size: 256
   capacity: 500000
   train_ratio: 0.8
