--- a/scripts/config/main/train_value.yaml
+++ b/scripts/config/main/train_value.yaml
@@ -4,29 +4,24 @@ run_name: ''
 
 train:
   load_path: null
-  save_path: /content/drive/MyDrive/College/Tsinghua/Deep_Reinforcement_Learning/digiq_mb/train_value_model
-  epoch: 100
+  save_path: /home/qinweima/digiq_mb/digiq/checkpoints/train_value
+  epoch: 10
   val_interval: 10
 
-TransitionModel:
+ValueModel:
   state_dim: 3584
   goal_dim: 1536
   embed_dim: 2048 # or others?
-  action_dim: 1536
   num_attn_layers: 12
   num_heads: 16
   activation: ReLU
 
-Action_encoder:
-  action_encoder_backbone: roberta-base # deberta-base , electra-base
-  action_encoder_cache_dir: null
-
 Goal_encoder:
   goal_encoder_backbone: roberta-base
-  goal_encoder_cache_dir: null
+  goal_encoder_cache_dir: /srv/local/xsm/hf_cache/roberta-base
 
 data:
-  data_path: /content/drive/MyDrive/College/Tsinghua/Deep_Reinforcement_Learning/digiq_mb/datasets/general-origin-uitars.pt
+  data_path: /home/qinweima/digiq_mb/digiq/data/general.pt
   batch_size: 512
   capacity: 500000
   train_ratio: 0.8
