--- a/scripts/config/main/eval.yaml
+++ b/scripts/config/main/eval.yaml
@@ -2,11 +2,15 @@ defaults:
   - default
   - _self_
 
-save_path: '/home/<username>/aitw-webshop-digiq-agent'
+save_path: '/home/mqj/aitw-webshop-digiq-agent'
 run_name: 'evaluate-digiq-webshop'
 task_set: "webshop" # "general" or "webshop"
 train_algorithm: "digiq" # only "digiq" supported
 task_mode: "eval"
+
+# trained value and transition model
+transition_path: "/data/mqj/models/full_transition/digiq_TransitionModel_tf512-2.pth"
+value_path: "/data/mqj/models/value-ws/value_model_best.pth"
 
 # critic arch (don't change it unless you trained your model with a different spec)
 advantage_estimation: "bellman"
